<resources>
    <string name="app_name">Travel Mate NTT</string>
    <string name="welcome_to_travel_mate">Welcome to Travel Mate</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="siap_memulai_perjalanan">Siap memulai perjalanan?</string>
    <string name="login">Login</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="register">Register</string>
    <string name="ayo_mulai_perjalananmu">Ayo mulai perjalananmu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="empty_name">Empty name</string>
    <string name="name_too_short">Name to short</string>
    <string name="minimum_characters">Minimum character</string>
    <string name="travel_mate_ntt">Travel Mate NTT</string>
    <string name="or_login_with">Or Login with</string>
    <string name="log_in_with_google">Login with Google</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun ?</string>
    <string name="register_with_google">Register with Google</string>
    <string name="or_register_with">Or Register with</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="story">Story</string>
    <string name="wishlist">Wishlist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="destinasi">Destinasi</string>
    <string name="direction">Direction</string>
    <string name="love_icon">Love Icon</string>
    <string name="site_map">Site Map</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="bintang">★★★★☆</string>
    <string name="_4_5">4.5</string>
    <string name="_120">(120)</string>
    <string name="gunung_kelimutu">Gunung Kelimutu</string>
    <string name="rp_20_000_50_000">Rp 20.000 - 50.000</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hi_rizki">Hi, %1s</string>
    <string name="info_akun">Info Akun</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="wisata_alam">Wisata Alam</string>
    <string name="tugu">Tugu</string>
    <string name="taman_nasional">Taman Nasional</string>
    <string name="taman">Taman</string>
    <string name="sungai">Sungai</string>
    <string name="pulau">Pulau</string>
    <string name="pantai">Pantai</string>
    <string name="gunung">Gunung</string>
    <string name="goa">Goa</string>
    <string name="desa_wisata">Desa Wisata</string>
    <string name="danau">Danau</string>
    <string name="bukit">Bukit</string>
    <string name="batu_karang">Batu Karang</string>
    <string name="air_terjun">Air Terjun</string>
    <string name="let_s_travel">Let\'s Travel</string>
    <string name="usernamesetting">Username:</string>
    <string name="emailsetting">Email:</string>
    <string name="tidak_ada_wishlist">Tidak ada wishlist</string>
    <string name="daftar_wishlist">Daftar Wishlist</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="image_story">Story Image</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="add_story">Add Story</string>
    <string name="username_not_found">Hi, Guest</string>
    <string name="story_content">Story Content</string>
    <string name="liked_by">Liked By</string>
    <string name="updated_at">Updated At</string>
    <string name="likes">Likes</string>
    <string name="created_at">Created At</string>
</resources>