<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StoryFragment">

    <ImageView
        android:id="@+id/storyImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:src="@drawable/travel_mate_logo" />

    <TextView
        android:id="@+id/storyContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="224dp"
        android:padding="16dp"
        android:text="@string/story_content"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/storyRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:numStars="5"
        android:rating="0"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/storyDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="360dp"
        android:padding="16dp"
        android:text="@string/created_at"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/storyLikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="400dp"
        android:padding="16dp"
        android:text="@string/likes"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/storyUpdateDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="440dp"
        android:padding="16dp"
        android:text="@string/updated_at"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/storyLikedBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="480dp"
        android:padding="16dp"
        android:text="@string/liked_by"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
</RelativeLayout>
