<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/travel_mate_logo"
            android:alpha="0.9"/>

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:text="@string/welcome_to_travel_mate"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWelcome_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:padding="8dp"
            android:text="@string/siap_memulai_perjalanan"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tvWelcome"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

        <ImageButton
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="100dp"
            android:layout_marginStart="38dp"
            android:contentDescription="@string/login"
            android:textColorHint="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvWelcome_Description"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome_Description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginTop="113dp"
            android:layout_marginStart="93dp"
            app:layout_constraintStart_toStartOf="@+id/tvWelcome_Description"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome_Description"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tvInfoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_memiliki_akun"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/green"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvInfoRegister"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>